Fix permission prompt anchoring in fullscreen when UI is hidden

This CL fixes a regression caused by https://chromium-review.googlesource.com/1004886
where permission prompts would appear partially off screen in full screen mode
on platforms where we hide the Chrome UI.

Before:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=334665&signed_aid=cQIe_b4bfUZn8i-akRK_ZQ==&inline=1

After:
https://bugs.chromium.org/p/chromium/issues/attachment?aid=334829&signed_aid=cXhOlJe-_oibvrzmLtL4Bw==&inline=1

This also fixes the DCHECK in GetPageInfoAnchorRect() to be relative to
GetPageInfoAnchorView() rather than copy pasting its bail out condition.

Bug: 833257, 814532
Change-Id: I6ef85ace735b0b217b3a473365791ad453cf8378
Reviewed-on: https://chromium-review.googlesource.com/1013676
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553898}