chrome/browser/ui/views/bubble_anchor_util_views.cc
@@ -6,7 +6,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/views/bubble_anchor_util_views.h"
 
 #include "build/build_config.h"
-#include "chrome/browser/ui/browser.h"
 #include "chrome/browser/ui/views/frame/app_menu_button.h"
 #include "chrome/browser/ui/views/frame/browser_view.h"
 #include "chrome/browser/ui/views/location_bar/location_bar_view.h"
@@ -26,13 +25,16 @@ views::View* GetPageInfoAnchorView(Browser* browser, Anchor anchor) {
   BrowserView* browser_view = BrowserView::GetBrowserViewForBrowser(browser);
 
   if (anchor == kLocationBar &&
-      browser->SupportsWindowFeature(Browser::FEATURE_LOCATIONBAR) &&
       browser_view->GetLocationBarView()->visible()) {
     return browser_view->GetLocationBarView()->GetSecurityBubbleAnchorView();
   }
   // Fall back to menu button if no location bar present.
 
-  return browser_view->toolbar_button_provider()->GetAppMenuButton();
+  views::View* app_menu_button =
+      browser_view->toolbar_button_provider()->GetAppMenuButton();
+  if (app_menu_button && app_menu_button->visible())
+    return app_menu_button;
+  return nullptr;
 }
 
 gfx::Rect GetPageInfoAnchorRect(Browser* browser) {
@@ -40,8 +42,8 @@ gfx::Rect GetPageInfoAnchorRect(Browser* browser) {
   if (views_mode_controller::IsViewsBrowserCocoa())
     return GetPageInfoAnchorRectCocoa(browser);
 #endif
-  // GetPageInfoAnchorView() should be preferred when there is a location bar.
-  DCHECK(!browser->SupportsWindowFeature(Browser::FEATURE_LOCATIONBAR));
+  // GetPageInfoAnchorView() should be preferred if available.
+  DCHECK_EQ(GetPageInfoAnchorView(browser), nullptr);
 
   BrowserView* browser_view = BrowserView::GetBrowserViewForBrowser(browser);
   // Get position in view (taking RTL UI into account).
